<resources>
    <string name="app_name">ProjetoFirebase</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="login">Usuário</string>
    <string name="text_cadastro">Crie uma conta clicando aqui</string>
    <string name="title_cadastro">Cadastra-se</string>
    <string name="nome">Nome</string>
    <string name="save">Cadastrar</string>
    <string name="icon_de_email">icon de email</string>
    <string name="logoff">logoff</string>
</resources>